# exercise

ceres/bundle_adjustment/: CMakeLists.txt  main.cpp
ceres/hello-world/: CMakeLists.txt  curve_fitting.cpp  main.cpp  powell.cpp
